# sc_atlas_agentic_builder

./: .gitignore  LICENSE  README.md  SKILL.md  base.py  paper.md  pyproject.toml
.claude/skills/sc-atlas-agentic-builder/: SKILL.md
annotation/: __init__.py  annotate_cell_types_tool.py  celltypist_tool.py  check_confidence_tool.py  operations.py  score_markers_tool.py
clustering/: __init__.py  clustering_tool.py  operations.py
demo/: create_demo_data.py  run_pipeline.py  run_with_claude.py
integration/: __init__.py  evaluate_integration_tool.py  operations.py  run_integration_tool.py  select_genes_tool.py
marker_genes/: __init__.py  marker_genes_tool.py  operations.py
preprocessing/: __init__.py  operations.py  preprocessing_tool.py  profiler.py
utility/: __init__.py  annotate_subclusters_tool.py  harmonize_labels_tool.py  merge_clusters_tool.py  operations.py  prepare_data_tool.py  reflect_annotation_tool.py  subcluster_tool.py
