[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sc-atlas-agentic-builder"
version = "0.1.0"
description = "LLM-agent-driven pipeline for autonomous single-cell RNA-seq cell atlas construction"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Yicheng Gao"},
  {name = "Yuheng Zhao"},
  {name = "Fabian J. Theis"},
]
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "leidenalg>=0.10",
    "python-igraph>=0.11",
]

[project.optional-dependencies]
integration = [
    "harmonypy>=0.2",
    "scanorama>=1.7",
]
evaluation = [
    "scib-metrics>=0.5",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.30",
]
all = [
    "harmonypy>=0.2",
    "scanorama>=1.7",
    "scib-metrics>=0.5",
    "openai>=1.0",
    "anthropic>=0.30",
    "celltypist",
    "doubletdetection",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sc_atlas_agentic_builder*"]
